# money-bill

./: .gitignore  CLAUDE.md  README.md  build_log.txt  index.html  money-bill.code-workspace  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml
design-system/moneybill/: MASTER.md
src/: App.vue  Home.vue  i18n.ts  index.css  index.d.ts  main.ts  router.ts
src-tauri/: Cargo.toml  build_log.txt  error.txt  sqlite3.lib  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  error.rs  lib.rs  main.rs  tauri_struct.rs
src-tauri/src/database/: account.rs  details.rs  init.rs  transaction.rs
src/assets/i18n/: en.json  zh.json  zh_CN.json
src/components/: AddBillItems.vue  ExpensesHistogram.vue  IncomeCost.vue  side-bar.vue
src/components/AddBill/: AccountTab.vue  AccountsItems.vue  AddBill.vue  AddBillAccount.vue  types.ts
src/components/Bill/: AddBill.vue  AddBillItems.vue  BillTab.vue
src/components/Home/: ExpensesHistogram.vue  Home.vue  IncomeExpenses.vue
src/components/PC/AddBill/: AccountTab.vue  AccountsItems.vue  AddBill.vue  AddBillAccount.vue
src/components/PC/Assets/: AccountDialog.vue  AccountTreeItem.vue  AccountTreeMiddleItem.vue  AssetsView.vue
src/components/PC/Budget/: BudgetView.vue
src/components/PC/History/: HistoryView.vue
src/components/PC/Home/: ExpensesHistogram.vue  Home.vue  IncomeExpenses.vue
